Update announcement links. Fix address wrap

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ h5 {
 
 p {
     color: #959094;
+    overflow-wrap: break-word;
 }
 
 p.lead {
